[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"] # You can also use cdylib, depending on your project

[dependencies]
ocaml = "1.0.0-beta.4"
wasmparser = "0.93" 

[build-dependencies]
ocaml-build = "1.0.0-beta.4"

[workspace]
members = [
  ".",
  "client/rust"
]