(library
 (name wasmstore)
 (public_name wasmstore)
 (libraries
  unix
  lwt.unix
  irmin.unix
  irmin-fs.unix
  irmin-watcher
  logs.fmt
  fmt.tty
  fmt.cli
  logs.cli
  cohttp-lwt-unix
  websocket
  yojson)
 (preprocess
  (pps ppx_irmin.internal))
 (foreign_archives wasm)
 (c_library_flags
  (-lpthread -lc -lm)))

(rule
 (targets libwasm.a)
 (deps
  (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/../../target --release)
   (run mv %{project_root}/../../target/release/libwasm.a libwasm.a))))
