(library
 (name wasmstore)
 (public_name wasmstore)
 (modes native)
 (no_dynlink)
 (libraries
  unix
  lwt_eio
  lwt.unix
  irmin.unix
  irmin-fs.unix
  irmin-watcher
  logs.fmt
  fmt.tty
  fmt.cli
  logs.cli
  cohttp-lwt-unix
  websocket
  yojson
  ctypes
  ctypes.foreign)
 (preprocess
  (pps ppx_irmin.internal))
 (foreign_archives wasm)
 (c_library_flags
  (-lpthread -lc -lm)))

(rule
 (targets libwasm.a)
 (deps (glob_files *.rs))
 (action
  (progn
   (run sh -c "cd %{project_root}/../.. && cargo build --release")
   (run mv %{project_root}/../../target/release/libwasm.a libwasm.a))))
