(library
 (name wasmstore)
 (public_name wasmstore)
 (libraries
  unix
  lwt_eio
  lwt.unix
  irmin.unix
  irmin-fs.unix
  irmin-watcher
  logs.fmt
  fmt.tty
  fmt.cli
  logs.cli
  logs.threaded
  cohttp-lwt-unix
  websocket
  yojson
  ctypes
  ctypes.foreign)
 (preprocess
  (pps ppx_irmin.internal))
 (foreign_archives wasm)
 (c_library_flags
  (-lpthread -lc -lm)))

(rule
 (targets libwasm.a dllwasm.so)
 (deps
  (glob_files *.rs))
 (action
  (progn
   (run sh -c "cd %{project_root}/../.. && cargo build --release")
   (run
    sh
    -c
    "mv %{project_root}/../../target/release/libwasm.so ./dllwasm.so 2> /dev/null || mv %{project_root}/../../target/release/libwasm.dylib ./dllwasm.so")
   (run mv %{project_root}/../../target/release/libwasm.a libwasm.a))))
