[tool.poetry]
name = "wasmstore"
version = "0.2.0"
description = "Wasmstore client for Python"
authors = ["Dylibso <oss@dylib.so>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
python-lsp-server = "^1.5.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
