[package]
name = "wasmstore-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
anyhow = "1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}

[workspace]