[package]
name = "wasmstore-client"
version = "0.1.0"
edition = "2021"
description = "Wasmstore client"
authors = ["Dylibso Inc", "oss@dylibso.com"]
license = "BSD-3-Clause"
repository = "https://github.com/dylibso/wasmstore"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
anyhow = "1"
tokio = {version = "1", features = ["full"]}
serde = {version = "1", features = ["derive"]}

[workspace]